<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="#00AD1919"
    tools:actionBarNavMode="tabs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:layout_marginBottom="0dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layerType="hardware"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/restoran"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/miss_simit"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />

            </TableRow>

            <TableRow
                android:layout_width="238dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/mesafe"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/_1_1"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/indirim"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/_10"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/kalan_sure"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="8sp"
                    android:text="14:36"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="sans"
                    app:fontFamily="monospace" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>